# optima

./: .directory  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPING.md  INSTALL.md  README.md  bitbucket-pipelines.yml  environment.devenv.yml  install  pytest.ini
Optima/: .cproject  .directory  .gitignore  .project  ActiveStepper.cpp  ActiveStepper.hpp  Analysis.hpp  BacktrackSearch.cpp  BacktrackSearch.hpp  BacktrackSearchOptions.hpp  BaseDims.hpp  BasicSolver.cpp  BasicSolver.hpp  Bounds.cpp  Bounds.hpp  CMakeLists.txt  CanonicalDims.hpp  CanonicalDims.py.cxx  CanonicalMatrix-test.py  CanonicalMatrix.cpp  CanonicalMatrix.hpp  CanonicalMatrix.py.cxx  CanonicalVector.hpp  CanonicalVector.py.cxx  Canonicalizer.cpp  Canonicalizer.cxx  Canonicalizer.hpp  Canonicalizer.py  CanonicalizerAdvanced.cpp  CanonicalizerAdvanced.hpp  Common.hpp  ComplementarityVariables.cpp  ComplementarityVariables.hpp  Constants.hpp  ConstraintFunction.cpp  ConstraintFunction.hpp  ConstraintFunction.py.cxx  ConstraintResult.cpp  ConstraintResult.hpp  ConstraintResult.py.cxx  (+250 more)
Optima/Common/: Exception.cpp  Exception.hpp  Index.hpp  Optional.hpp  Outputter.cpp  Outputter.hpp  Result.hpp  SetUtils.hpp  SetUtils.hxx  Timing.cpp  Timing.hpp
Optima/Core/: Constraint.cpp  Constraint.hpp  ConstraintOptimizer.hpp  ConstraintRegularizer.cpp  Filter.hpp  Hessian.cpp  Hessian.hpp  HessianMatrix.cpp  HessianMatrix.hpp  IpSaddlePointMatrix.cpp  IpSaddlePointMatrix.hpp  IpSaddlePointSolver.cpp  IpSaddlePointSolver.hpp  Jacobian.hpp  KktSolver.cpp  KktSolver.hpp  LinearProblem.hpp  Objective.cpp  Objective.hpp  OptimumMethod.hpp  OptimumOptions.cpp  OptimumOptions.hpp  OptimumParams.cpp  OptimumParams.hpp  OptimumProblem.cpp  OptimumProblem.hpp  OptimumResult.cpp  OptimumSolver.cpp  OptimumSolver.hpp  OptimumSolverBase.hpp  OptimumSolverIpNewton.cpp  OptimumSolverIpNewton.hpp  OptimumState.hpp  OptimumStepper.cpp  OptimumStepper.hpp  OptimumStructure.cpp  OptimumStructure.hpp  RegularizedConstraint.cpp  RegularizedConstraint.hpp  Regularizer.cpp  (+19 more)
Optima/Excluded/: Experimental.hpp  MinimumSolver.hpp  Scaling.hpp
Optima/IPFilter/: AlgorithmIPFilter.cpp  AlgorithmIPFilter.hpp  Exceptions.hpp  IPFilterExceptions.hpp  IPFilterSolver.cpp  IPFilterSolver.hpp  IPFilterState.hpp  Params.hpp  Utils.cpp  Utils.hpp
Optima/Math/: BlockDiagonalMatrix.cpp  BlockDiagonalMatrix.hpp  CanonicalMatrix.cpp  CanonicalMatrix.hpp  Canonicalizer.cpp  Canonicalizer.hpp  EigenExtern.cpp  EigenExtern.hpp  EigenMatrixPlugin.hpp  LU.cpp  LU.hpp  Matrix.hpp  Matrix.hxx  Utils.cpp  Utils.hpp
Optima/Optima/: CMakeLists.txt  Optima.hpp
Optima/Utils/: ConstraintState.cpp  ConstraintState.hpp  Functions.hpp  ObjectiveState.cpp  ObjectiveState.hpp  OptimumProblem.cpp  OptimumProblem.hpp  Output.cpp  Output.hpp  Utils.hpp
Optima/demos/: CMakeLists.txt  Demo1.cpp  Demo2.cpp  Demo3.cpp
Optima/excluded/: Main.cpp  MinimumSolver.hpp  Scaling.cpp
Optima/src/: CMakeLists.txt  Optima.hpp
Optima/testing/: optima.py
Optima/tests/: CMakeLists.txt
PyOptima/: CMakeLists.txt  PyCanonicalizer.cpp  PyEigen.cpp  PyEigen.hpp  PyIndex.cpp  PyIndex.hpp  PyMain.cpp  PyMatrix.cpp  PyMatrix.hpp  PyNonlinearOptions.cpp  PyNonlinearOptions.hpp  PyOptima.cpp  PyOptimumMethod.cpp  PyOptimumMethod.hpp  PyOptimumOptions.cpp  PyOptimumOptions.hpp  PyOptimumProblem.cpp  PyOptimumResult.cpp  PyOptimumResult.hpp  PyOptimumSolver.cpp  PyOptimumState.cpp  PyOptimumState.hpp  PyOutputter.cpp  PyOutputter.hpp  PySaddlePointMatrix.cpp  PySaddlePointOptions.cpp  PySaddlePointResult.cpp  PyTiming.cpp  PyUtils.cpp
python/: ActiveStepper.cxx  BasicSolver.cxx  CMakeLists.txt  Canonicalizer.cxx  CanonicalizerAdvanced.cxx  ComplementarityVariables.cxx  ConstraintFunction.cxx  Constraints.cxx  Dims.cxx  Eigen.cxx  ExtendedCanonicalizer.cxx  HessianMatrix.cxx  IndexUtils.cxx  IpSaddlePointMatrix.cxx  IpSaddlePointSolver.cxx  LU.cxx  LagrangeMultipliers.cxx  Number.cxx  Objective.cxx  ObjectiveFunction.cxx  ObjectiveState.cxx  Optima.cxx  OptimumOptions.cxx  OptimumParams.cxx  OptimumProblem.cxx  OptimumResult.cxx  OptimumSolver.cxx  OptimumState.cxx  OptimumStepper.cxx  OptimumStructure.cxx  Options.cxx  Outputter.cxx  Params.cxx  Partition.cxx  PrimalVariables.cxx  Problem.cxx  Result.cxx  SaddlePointMatrix.cxx  SaddlePointOptions.cxx  SaddlePointSolver.cxx  (+11 more)
python/PyOptima/: CMakeLists.txt  PyOptima.cpp
python/bindings/: BacktrackSearchOptions.cxx  BaseDims.cxx  BasicSolver.cxx  CMakeLists.txt  CanonicalDims.cxx  CanonicalMatrix.cxx  CanonicalVector.cxx  Canonicalizer.cxx  Constants.cxx  ConstraintFunction.cxx  ConvergenceOptions.cxx  Dims.cxx  Echelonizer.cxx  EchelonizerExtended.cxx  EchelonizerW.cxx  Eigen.cxx  ErrorStatusOptions.cxx  Index.cxx  IndexUtils.cxx  JacobianBlockH.cxx  JacobianBlockV.cxx  JacobianBlockW.cxx  JacobianMatrix.cxx  LU.cxx  LineSearchOptions.cxx  LinearSolver.cxx  LinearSolverOptions.cxx  MasterDims.cxx  MasterMatrix.cxx  MasterMatrixH.cxx  MasterMatrixOperators.cxx  MasterMatrixOps.cxx  MasterMatrixV.cxx  MasterMatrixW.cxx  MasterProblem.cxx  MasterSensitivity.cxx  MasterSolver.cxx  MasterState.cxx  MasterVector.cxx  MatrixRWQ.cxx  (+32 more)
python/optima/: CMakeLists.txt
python/package/: CMakeLists.txt  __init__.py  setup.py.in
tests/: ActiveStepper.py  BasicSolver.py  CMakeLists.txt  CanonicalMatrix.py  Canonicalizer.py  CanonicalizerAdvanced.py  Constraints.py  Echelonizer.py  EchelonizerExtended.py  EchelonizerW.py  ExtendedCanonicalizer.py  HessianMatrix.py  IndexUtils.py  IpSaddlePointMatrix.py  IpSaddlePointSolver.py  JacobianBlockH.py  JacobianBlockV.py  JacobianBlockW.py  JacobianMatrix.py  LU.py  LinearSolver.py  MasterMatrix.py  MasterMatrixH.py  MasterMatrixV.py  MasterMatrixW.py  MasterSolver.py  MasterVector.py  MatrixRWQ.py  ObjectiveState.py  OptimumSolver.py  OptimumStepper.py  OptimumStructure.py  Partition.py  Problem.py  ResidualFunction.py  ResidualVector.py  SaddlePointMatrix.py  SaddlePointSolver.py  SaddlePointSolver2.py  SaddlePointSolverLegacy.py  (+16 more)
tests/Core/: TestHessianMatrix.cpp  (+7 more)
(+225 files in other folders)
